[gd_scene load_steps=4 format=3 uid="uid://b3k8basascene"]

[ext_resource type="PackedScene" uid="uid://drfp4vl2w1wvr" path="res://level1/scene_template.tscn" id="1_bar_template"]
[ext_resource type="Script" path="res://level1/bar.gd" id="2_bar_script"]
[ext_resource type="PackedScene" uid="uid://dishwash_minigame" path="res://level1/dishwash_minigame.tscn" id="3_dishwash"]

[node name="Bar" instance=ExtResource("1_bar_template")]
script = ExtResource("2_bar_script")

[node name="DishwashMinigame" parent="AspectContainer/MainContainer/mainarea/PlayArea" index="0" instance=ExtResource("3_dishwash")]
layout_mode = 1

[node name="WashMugsButton" type="Button" parent="AspectContainer/MainContainer/mainarea/Menu" index="1"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"AffirmativeButton"
text = "Wash Mugs"

[node name="StopWashingButton" type="Button" parent="AspectContainer/MainContainer/mainarea/Menu" index="2"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_type_variation = &"AffirmativeButton"
text = "Stop Washing"

[node name="ToGamblingButton" type="Button" parent="AspectContainer/MainContainer/mainarea/Menu" index="3"]
layout_mode = 2
theme_type_variation = &"ForwardNavButton"
text = "Gambling"

[node name="ToDormButton" type="Button" parent="AspectContainer/MainContainer/mainarea/Menu" index="4"]
layout_mode = 2
theme_type_variation = &"BackNavButton"
text = "Dormitory"
